[package]
name = "ddc-control"
version = "0.1.0"
authors = ["Augusto Fraga Giachero <augustofg96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddc-hi = "0.1.3"
clap = { version = "2.33.3", default-features = false }
parse_int = "0.4.0"